# mcp-risk-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: github-actions.md  professional-review.md  professional-review.zh-CN.md
examples/: hardened.mcp.json  insecure.mcp.json
src/agentguard/: __init__.py  cli.py  models.py  report.py  rules.py  scanner.py
tests/: test_cli.py  test_scanner.py
